# rust-blackpill2-blinky

./: Cargo.toml  README.md  openocd.cfg
.cargo/: config.toml
src/: main.rs
