[package]
name = "blinky"
authors = ["Lukas Borges <lukasborges@gmail.com>"]
edition = "2021"
version = "0.0.1"

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = "0.7.4"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411"]